<resources>
    <string name="app_name">A4</string>
    <string name="gameTitle">Doge Clicker</string>
    <string name="dogetitle">Doge:</string>
    <string name="initialDogeValue">0</string>
    <string name="textHuman">H u m a n s:</string>
    <string name="textFireHydrant">Fire Hydrants:</string>
    <string name="textTreats">tr3@t$:</string>
    <string name="textShoes">SHOES:</string>
    <string name="buttonAddSymbol">+</string>
    <string name="textCost">Buy for </string>
    <string name="textReport">Your %1$d %2$s help find %3$f doges per press \n</string>
</resources>
